fixed mobile spacing

--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ a {
     }
 
     .box h1 {
-        font-size: 60px;
+        font-size: 50px;
     }
 
     .box h2 {
